internet_gateway.tf
# Creating Internet Gateway 
resource "aws_internet_gateway" "IGW" {
  vpc_id = aws_vpc.custom.id
}
